--- a/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
+++ b/eTools Ultimate/Views/Pages/Motion/MotionPage.xaml
@@ -356,12 +356,14 @@
                             Margin="0,10,20,0"
                             ZIndex="1">
                         <ui:Button
-                                ToolTip="Undo">
+                            ToolTip="Undo"
+                            Command="{Binding UndoCommand}">
                             <ui:SymbolIcon Symbol="ArrowUndo24"/>
                         </ui:Button>
                         <ui:Button
-                                Margin="10,0,10,0"
-                                ToolTip="Redo">
+                            Margin="10,0,10,0"
+                            ToolTip="Redo"
+                            Command="{Binding RedoCommand}">
                             <ui:SymbolIcon Symbol="ArrowRedo24"/>
                         </ui:Button>
                         <ui:Button x:Name="SaveButton" 
