--- a/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
+++ b/eTools Ultimate/Views/Pages/Mover/MoverPage.xaml
@@ -1376,7 +1376,7 @@
                                                     Margin="0,2"
                                                     Content="Sound"
                                                     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                                    IsChecked="True" />
+                                                    IsChecked="{Binding ShowSoundsSection, Mode=TwoWay}" />
                                                 <CheckBox
                                                     Margin="0,2"
                                                     Content="Model / Mobility / Movement"
@@ -1662,7 +1662,7 @@
                     <Separator Margin="0,10,0,5" Visibility="{Binding ShowElementalSection, Mode=OneWay, Converter={StaticResource BoolToVis}}" />
 
                     <!--  Sound Section  -->
-                    <StackPanel>
+                    <StackPanel Visibility="{Binding ShowSoundsSection, Mode=TwoWay, Converter={StaticResource BoolToVis}}">
                         <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="Sound" />
                         <UniformGrid Columns="2">
                             <!--  SFX hit sound  -->
@@ -1752,7 +1752,7 @@
                             </Grid>
                         </UniformGrid>
                     </StackPanel>
-                    <Separator Margin="0,10,0,5" />
+                    <Separator Margin="0,10,0,5" Visibility="{Binding ShowSoundsSection, Mode=OneWay, Converter={StaticResource BoolToVis}}" />
 
                     <!--  Model & Motions Section  -->
                     <StackPanel Visibility="{Binding ShowModelSection, Mode=OneWay, Converter={StaticResource BoolToVis}}">
