--- a/eTools Ultimate/Views/Pages/Giftbox/GiftboxPage.xaml
+++ b/eTools Ultimate/Views/Pages/Giftbox/GiftboxPage.xaml
@@ -215,7 +215,7 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                
+
                 <StackPanel
                     Grid.Column="1"
                     Margin="0,10,0,0"
@@ -226,9 +226,7 @@
                     <ui:Button Margin="10,0,10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
                         <ui:SymbolIcon Symbol="ArrowRedo24" />
                     </ui:Button>
-                    <ui:Button
-                        Margin="0,0,10,0"
-                        Content="{i18n:StringLocalizer 'Save'}" />
+                    <ui:Button Margin="0,0,10,0" Content="{i18n:StringLocalizer 'Save'}" />
                     <ui:Button
                         Margin="0,0,10,0"
                         Appearance="Secondary"
@@ -237,7 +235,7 @@
                     <ui:Button
                         Margin="0,0,10,0"
                         Background="#2F70AF"
-                        Click="AddItemButton_Click"
+                        Command="{Binding AddGiftboxItemCommand}"
                         Content="{i18n:StringLocalizer 'Add item'}"
                         Icon="Add24" />
                 </StackPanel>
@@ -276,8 +274,7 @@
                 </Grid>
 
                 <!--  Probability information  -->
-                <ui:TextBlock
-                    Foreground="{DynamicResource TextFillColorSecondaryBrush}">
+                <ui:TextBlock Foreground="{DynamicResource TextFillColorSecondaryBrush}">
                     <Run Text="{i18n:StringLocalizer 'Total probability:'}" />
                     <Run Text="{Binding SelectedItem.TotalProbability, Mode=OneWay, ElementName=GiftboxListView}" />
                     (<Run Text="{Binding SelectedItem.TotalProbabilityPercent, Mode=OneWay, ElementName=GiftboxListView}" />
@@ -303,20 +300,6 @@
                     HorizontalGridLinesBrush="{DynamicResource ControlElevationBorderBrush}"
                     IsReadOnly="True"
                     ItemsSource="{Binding SelectedItem.Items, ElementName=GiftboxListView}">
-                    <DataGrid.Resources>
-                        <Style TargetType="DataGridRow">
-                            <Setter Property="Background" Value="Transparent" />
-                            <Setter Property="Height" Value="40" />
-                            <Style.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="{DynamicResource ControlFillColorSecondaryBrush}" />
-                                </Trigger>
-                                <Trigger Property="IsSelected" Value="True">
-                                    <Setter Property="Background" Value="{DynamicResource ControlFillColorDefaultBrush}" />
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </DataGrid.Resources>
                     <DataGrid.Columns>
                         <DataGridTemplateColumn
                             Width="*"
@@ -355,14 +338,34 @@
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
-                        <DataGridTextColumn
+                        <DataGridTemplateColumn
                             Width="Auto"
-                            Binding="{Binding Prop.NNum}"
-                            Header="{i18n:StringLocalizer 'Quantity'}" />
-                        <DataGridTextColumn
+                            Header="{i18n:StringLocalizer 'Quantity'}"
+                            SortMemberPath="Prop.NNum">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <ui:NumberBox
+                                        Background="{DynamicResource ControlFillColorDefaultBrush}"
+                                        BorderBrush="{DynamicResource ControlElevationBorderBrush}"
+                                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                                        Value="{Binding Prop.NNum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn
                             Width="Auto"
-                            Binding="{Binding ProbabilityPercent}"
-                            Header="{i18n:StringLocalizer '%'}" />
+                            Header="{i18n:StringLocalizer 'Probability (%)'}"
+                            SortMemberPath="Prop.DwProbability">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <ui:NumberBox
+                                        Background="{DynamicResource ControlFillColorDefaultBrush}"
+                                        BorderBrush="{DynamicResource ControlElevationBorderBrush}"
+                                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                                        Value="{Binding ProbabilityPercent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
                         <DataGridTemplateColumn Width="Auto" Header="{i18n:StringLocalizer 'Actions'}">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
