--- a/eTools Ultimate/Views/Pages/Giftbox/GiftboxPage.xaml
+++ b/eTools Ultimate/Views/Pages/Giftbox/GiftboxPage.xaml
@@ -226,7 +226,10 @@
                     <ui:Button Margin="10,0,10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
                         <ui:SymbolIcon Symbol="ArrowRedo24" />
                     </ui:Button>
-                    <ui:Button Margin="0,0,10,0" Content="{i18n:StringLocalizer 'Save'}" />
+                    <ui:Button
+                        Margin="0,0,10,0"
+                        Command="{Binding SaveCommand}"
+                        Content="{i18n:StringLocalizer 'Save'}" />
                     <ui:Button
                         Margin="0,0,10,0"
                         Appearance="Secondary"
