--- a/eTools Ultimate/App.xaml
+++ b/eTools Ultimate/App.xaml
@@ -2,8 +2,8 @@
     x:Class="eTools_Ultimate.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     DispatcherUnhandledException="OnDispatcherUnhandledException"
     Exit="OnExit"
     Startup="OnStartup">
@@ -13,9 +13,10 @@
                 <ui:ThemesDictionary Theme="Dark" />
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
-            
-            <!-- Converters -->
+
+            <!--  Converters  -->
             <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+            <converters:ThemeToIndexConverter x:Key="ThemeToIndexConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
