--- a/eTools Ultimate/Views/Pages/Settings/PersonalizationPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/PersonalizationPage.xaml
@@ -4,10 +4,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     xmlns:vm="clr-namespace:eTools_Ultimate.ViewModels.Pages"
     Title="PersonalizationPage"
     d:DataContext="{d:DesignInstance vm:PersonalizationViewModel,
@@ -19,7 +19,7 @@
     <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
         <StackPanel Margin="24">
 
-            <!-- Theme Selection -->
+            <!--  Theme Selection  -->
             <ui:CardControl Margin="0,0,0,16" Icon="{ui:SymbolIcon Color24}">
                 <ui:CardControl.Header>
                     <Grid>
@@ -34,13 +34,14 @@
                         <ui:TextBlock Grid.Row="1" Text="{i18n:StringLocalizer 'Select which app theme to display'}" />
                     </Grid>
                 </ui:CardControl.Header>
-                <ComboBox MinWidth="200" SelectionChanged="ComboBox_SelectionChanged">
-                                            <ComboBoxItem Content="{i18n:StringLocalizer 'Light'}" IsSelected="{Binding IsLightTheme}" />
-                        <ComboBoxItem Content="{i18n:StringLocalizer 'Dark'}" IsSelected="{Binding IsDarkTheme}" />
+                <ComboBox MinWidth="200" SelectedIndex="{Binding CurrentApplicationTheme, Converter={StaticResource ThemeToIndexConverter}, Mode=TwoWay}">
+                    <ComboBoxItem Content="{i18n:StringLocalizer 'Light'}" />
+                    <ComboBoxItem Content="{i18n:StringLocalizer 'Dark'}" />
+                    <ComboBoxItem Content="{i18n:StringLocalizer 'High Contrast'}" />
                 </ComboBox>
             </ui:CardControl>
 
-            <!-- Language Selection -->
+            <!--  Language Selection  -->
             <ui:CardControl Margin="0,0,0,16" Icon="{ui:SymbolIcon LocalLanguage24}">
                 <ui:CardControl.Header>
                     <Grid>
@@ -62,7 +63,8 @@
                 </ComboBox>
             </ui:CardControl>
 
-            <!-- Auto-Save Interval Selection -->
+            <!--  Auto-Save Interval Selection  -->
+            <!-- TODO: add this feature later
             <ui:CardControl Margin="0,0,0,16" Icon="{ui:SymbolIcon Save24}">
                 <ui:CardControl.Header>
                     <Grid>
@@ -109,6 +111,7 @@
                     </Grid>
                 </StackPanel>
             </ui:CardControl>
+            -->
         </StackPanel>
     </ScrollViewer>
 </Page> 
