--- a/eTools Ultimate/App.xaml
+++ b/eTools Ultimate/App.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="clr-namespace:eTools_Ultimate.Converters"
+    xmlns:properties="clr-namespace:eTools_Ultimate.Properties"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     DispatcherUnhandledException="OnDispatcherUnhandledException"
     Exit="OnExit"
@@ -16,7 +17,6 @@
 
             <!--  Converters  -->
             <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
-            <converters:ThemeToIndexConverter x:Key="ThemeToIndexConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
