--- a/eTools Ultimate/Views/Pages/Settings/PersonalizationPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/PersonalizationPage.xaml
@@ -3,6 +3,7 @@
     x:Class="eTools_Ultimate.Views.Pages.PersonalizationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:appearance="clr-namespace:Wpf.Ui.Appearance;assembly=Wpf.Ui"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i18n="http://schemas.lepo.co/i18n/2022/xaml"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
@@ -34,10 +35,13 @@
                         <ui:TextBlock Grid.Row="1" Text="{i18n:StringLocalizer 'Select which app theme to display'}" />
                     </Grid>
                 </ui:CardControl.Header>
-                <ComboBox MinWidth="200" SelectedIndex="{Binding CurrentApplicationTheme, Converter={StaticResource ThemeToIndexConverter}, Mode=TwoWay}">
-                    <ComboBoxItem Content="{i18n:StringLocalizer 'Light'}" />
-                    <ComboBoxItem Content="{i18n:StringLocalizer 'Dark'}" />
-                    <ComboBoxItem Content="{i18n:StringLocalizer 'High Contrast'}" />
+                <ComboBox
+                    MinWidth="200"
+                    SelectedValue="{Binding CurrentApplicationTheme, Mode=TwoWay}"
+                    SelectedValuePath="Tag">
+                    <ComboBoxItem Content="{i18n:StringLocalizer 'Light'}" Tag="{x:Static appearance:ApplicationTheme.Light}" />
+                    <ComboBoxItem Content="{i18n:StringLocalizer 'Dark'}" Tag="{x:Static appearance:ApplicationTheme.Dark}" />
+                    <ComboBoxItem Content="{i18n:StringLocalizer 'High Contrast'}" Tag="{x:Static appearance:ApplicationTheme.HighContrast}" />
                 </ComboBox>
             </ui:CardControl>
 
