--- a/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
+++ b/eTools Ultimate/Views/Pages/TerrainObject/TerrainObjectPage.xaml
@@ -18,6 +18,9 @@
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    ScrollViewer.VerticalScrollBarVisibility="Disabled"
+    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+    ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -109,27 +112,32 @@
                     Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Border>
 
-            <!--  List  -->
+            <!--  Terrain List  -->
             <Border
                 Grid.Row="1"
                 Margin="0,0,10,0"
-                VerticalAlignment="Stretch"
                 Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
                 BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
                 BorderThickness="1,0,1,1">
-                <TreeView
-                    x:Name="TerrainsTreeView"
-                    VerticalAlignment="Stretch"
-                    dd:DragDrop.DragDropContext="TerrainsTreeView"
-                    dd:DragDrop.DropHandler="{Binding DragDropHandler}"
-                    dd:DragDrop.IsDragSource="True"
-                    dd:DragDrop.IsDropTarget="True"
-                    dd:DragDrop.SelectDroppedItems="True"
-                    Background="Transparent"
-                    BorderThickness="0"
-                    ItemsSource="{Binding TerrainsView}"
-                    Loaded="TerrainsTreeView_Loaded"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <ScrollViewer
+                    VerticalScrollBarVisibility="Auto"
+                    HorizontalScrollBarVisibility="Disabled">
+                    <TreeView
+                        x:Name="TerrainsTreeView"
+                        dd:DragDrop.DragDropContext="TerrainsTreeView"
+                        dd:DragDrop.DropHandler="{Binding DragDropHandler}"
+                        dd:DragDrop.IsDragSource="True"
+                        dd:DragDrop.IsDropTarget="True"
+                        dd:DragDrop.SelectDroppedItems="True"
+                        Background="Transparent"
+                        BorderThickness="0"
+                        ItemsSource="{Binding TerrainsView}"
+                        Loaded="TerrainsTreeView_Loaded"
+                        ScrollViewer.VerticalScrollBarVisibility="Auto"
+                        ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                        VirtualizingStackPanel.IsVirtualizing="True"
+                        VirtualizingStackPanel.VirtualizationMode="Recycling"
+                        VirtualizingStackPanel.IsVirtualizingWhenGrouping="True">
                     <TreeView.Resources>
                         <!--  Template for braces  -->
                         <HierarchicalDataTemplate DataType="{x:Type models:TerrainBrace}" ItemsSource="{Binding Children}">
@@ -161,7 +169,8 @@
                             </StackPanel>
                         </DataTemplate>
                     </TreeView.Resources>
-                </TreeView>
+                    </TreeView>
+                </ScrollViewer>
             </Border>
         </Grid>
 
@@ -196,14 +205,14 @@
             </GridSplitter.Template>
         </GridSplitter>
 
-        <!--  Right Side - Forms  -->
+        <!--  Right Side - Form  -->
         <Grid Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <!--  Header Buttons  -->
+            <!--  Add und Delete Buttons oben rechts  -->
             <StackPanel
                 Grid.Row="0"
                 Margin="0,10,30,0"
@@ -234,8 +243,8 @@
                 <ui:Button Background="#FD292F" Content="{i18n:StringLocalizer 'Delete'}" />
             </StackPanel>
 
-            <!--  Forms  -->
-            <StackPanel
+            <!--  Formulare  -->
+            <Grid
                 Grid.Row="1"
                 Margin="20"
                 VerticalAlignment="Top">
@@ -357,7 +366,7 @@
                         </DataTemplate>
                     </ContentControl.Resources>
                 </ContentControl>
-            </StackPanel>
+            </Grid>
         </Grid>
     </Grid>
 </Page> 
