--- a/eTools Ultimate/Views/Windows/LoadingErrorWindow.xaml
+++ b/eTools Ultimate/Views/Windows/LoadingErrorWindow.xaml
@@ -7,9 +7,9 @@
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Windows"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    Title="{i18n:StringLocalizer 'Loading error'}"
-    Width="400"
-    Height="200"
+    Title="{i18n:StringLocalizer 'Datei nicht gefunden'}"
+    Width="650"
+    Height="450"
     d:DataContext="{d:DesignInstance local:LoadingErrorWindow,
                                      IsDesignTimeCreatable=True}"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
@@ -21,61 +21,132 @@
     WindowCornerPreference="Round"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Grid>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-            <StackPanel
-                Grid.Row="0"
-                Width="380"
-                Height="Auto"
-                Margin="0,10,0,10"
-                HorizontalAlignment="Center"
-                Orientation="Vertical">
-                <StackPanel
-                    Height="53"
-                    HorizontalAlignment="Center"
-                    Orientation="Horizontal">
-                    <Image
-                        Width="32"
-                        Height="32"
-                        Margin="0,0,10,0"
-                        Source="/Views/Windows/WarningIcon.png" />
+        <!-- Header mit Icon und Titel -->
+        <StackPanel
+            Grid.Row="0"
+            Margin="0,0,0,20"
+            HorizontalAlignment="Center"
+            Orientation="Horizontal">
+            <ui:SymbolIcon
+                Width="48"
+                Height="48"
+                Margin="0,0,15,0"
+                FontSize="48"
+                Foreground="{DynamicResource SystemFillColorCautionBrush}"
+                Symbol="Warning24" />
+            <StackPanel VerticalAlignment="Center">
+                <TextBlock
+                    FontSize="24"
+                    FontWeight="SemiBold"
+                    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                    Text="{i18n:StringLocalizer 'Datei nicht gefunden'}" />
+                <TextBlock
+                    FontSize="14"
+                    Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                    Text="{i18n:StringLocalizer 'Eine erforderliche Datei konnte nicht geladen werden'}" />
+            </StackPanel>
+        </StackPanel>
+
+        <!-- Fehlermeldung und Details -->
+        <Border
+            Grid.Row="1"
+            Margin="0,0,0,20"
+            Padding="20"
+            Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+            BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+            BorderThickness="1"
+            CornerRadius="8">
+            <StackPanel>
+                <TextBlock
+                    Margin="0,0,0,15"
+                    FontSize="16"
+                    FontWeight="SemiBold"
+                    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                    Text="{i18n:StringLocalizer 'Was ist passiert?'}" />
+                
+                <TextBlock
+                    Margin="0,0,0,10"
+                    FontSize="14"
+                    Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                    Text="{i18n:StringLocalizer 'Die Anwendung konnte eine wichtige Datei nicht finden. Dies kann passieren, wenn:'}"
+                    TextWrapping="Wrap" />
+                
+                <StackPanel Margin="20,0,0,15">
                     <TextBlock
-                        VerticalAlignment="Center"
-                        Text="{i18n:StringLocalizer 'Not all files could be loaded.'}"
-                        TextAlignment="Center"
+                        Margin="0,0,0,5"
+                        FontSize="13"
+                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                        Text="• Die Datei wurde verschoben oder gelöscht"
+                        TextWrapping="Wrap" />
+                    <TextBlock
+                        Margin="0,0,0,5"
+                        FontSize="13"
+                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                        Text="• Der Pfad ist nicht korrekt"
+                        TextWrapping="Wrap" />
+                    <TextBlock
+                        Margin="0,0,0,5"
+                        FontSize="13"
+                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                        Text="• Die Datei ist beschädigt"
                         TextWrapping="Wrap" />
                 </StackPanel>
-                <TextBlock
-                    x:Name="ErrorMessageTextBox"
-                    Height="Auto"
-                    FontSize="12"
-                    TextAlignment="Center"
-                    TextWrapping="Wrap" />
-            </StackPanel>
 
-            <StackPanel
-                Grid.Row="1"
-                Margin="0,0,0,0"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Orientation="Horizontal">
-                <Button
-                    Width="120"
-                    Height="30"
-                    Margin="0,0,10,10"
-                    Content="{i18n:StringLocalizer 'Go to Resource Path'}" Click="Button_Click" />
-                <Button
-                    Width="135"
-                    Height="30"
-                    Margin="0,0,10,10"
-                    Content="{i18n:StringLocalizer 'Close Application'}" Click="Button_Click_1" />
+                <Border
+                    Margin="0,10,0,0"
+                    Padding="15"
+                    Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
+                    BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                    BorderThickness="1"
+                    CornerRadius="6">
+                    <StackPanel>
+                        <TextBlock
+                            FontSize="13"
+                            FontWeight="SemiBold"
+                            Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                            Text="{i18n:StringLocalizer 'Fehlende Datei:'}" />
+                        <TextBlock
+                            x:Name="ErrorMessageTextBox"
+                            Margin="0,5,0,0"
+                            FontSize="12"
+                            FontFamily="Consolas"
+                            Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                            TextWrapping="Wrap" />
+                    </StackPanel>
+                </Border>
             </StackPanel>
-        </Grid>
+        </Border>
 
+        <!-- Aktionsbuttons -->
+        <StackPanel
+            Grid.Row="2"
+            HorizontalAlignment="Center"
+            Orientation="Horizontal">
+            <ui:Button
+                MinWidth="140"
+                Height="36"
+                Margin="0,0,10,0"
+                Padding="15,0"
+                Appearance="Primary"
+                Content="{i18n:StringLocalizer 'Ordner öffnen'}"
+                Icon="Folder24"
+                Click="Button_Click" />
+            <ui:Button
+                MinWidth="160"
+                Height="36"
+                Margin="10,0,0,0"
+                Padding="15,0"
+                Appearance="Secondary"
+                Content="{i18n:StringLocalizer 'Anwendung beenden'}"
+                Icon="Dismiss24"
+                Click="Button_Click_1" />
+        </StackPanel>
     </Grid>
 </ui:FluentWindow>
