--- a/eTools Ultimate/Views/Pages/AccessoriesPage.xaml
+++ b/eTools Ultimate/Views/Pages/AccessoriesPage.xaml
@@ -216,7 +216,7 @@
                 Background="{DynamicResource ControlStrokeColorDefaultBrush}" />
 
             <!--  Title and Info  -->
-            <StackPanel Grid.Row="2">
+            <StackPanel Grid.Row="2" Margin="10">
                 <ui:TextBlock
                     FontSize="24"
                     FontTypography="Title"
