--- a/eTools Ultimate/Views/Pages/GiftboxesPage.xaml
+++ b/eTools Ultimate/Views/Pages/GiftboxesPage.xaml
@@ -240,7 +240,7 @@
                     Margin="0,0,10,0"
                     Appearance="Primary"
                     Command="{Binding AddGiftboxCommand}"
-                    Content="{i18n:StringLocalizer 'Add'}"
+                    Content="{i18n:StringLocalizer 'Create giftbox'}"
                     Icon="Add24" />
                 <ui:Button
                     Margin="0,0,10,0"
